# Proponent

./: .gitignore  Home.py  LICENSE  Procfile  Proponent.py  README.md  Welcome.py  app.yaml  element_configs.py  ffmpe  ffmpg  get_embeddings.py  mf_content.csv  mf_embeddings.json  pyproject.toml  requirements.txt  setup.sh  transform_videos.py
.streamlit/: config.toml
archive/: 1_Home.py  2_ABM_Campaigns.py
assets/: company-db.csv  company-pp.csv  competitors-db.csv  competitors.csv  contacts-db.csv  customer_personas.csv  customer_personas.json  customers-db.csv  customers.csv  examples.csv  files-db.csv  log.parquet  mf_embeddings.parquet  themes.csv
assets/code/: element_configs.py  genHTML.py  utils.py
assets/templates/: cp_template.csv  examples_chat.csv  examples_text.csv  hubspot_data.csv  mf_template.csv
code_aux/: Jason:Alice Chat History.md  injest_mf.py
downloads/: index.html
pages/: 1_Home.py  1_Sales_Enablement.py  1_Sales_View.py  2_Customer_Analytics.py  2_Messaging_Manager.py  3_Customer_Analytics.py  3_Messaging_Manager.py  4_Customer_Analytics.py  4_Messaging_Manager.py  4_Settings.py  Analytics.py  Customer_Analytics.py  Customer_Persona_Analytics.py  Messaging_Manager.py  Settings.py
templates/: customer_personas.csv  messaging_framework.csv
